# abs-scpi-driver-python

./: README.md  README.rst  pyproject.toml
.github/workflows/: pypi-publish.yml  release.yml
absscpi/: __init__.py  client.py
docs/: conf.py  development.rst  doc-requirements.txt  index.rst  installation.rst  util.rst
examples/: ip.py  serial_id.py
src/absscpi/: __init__.py  driver.py
